--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox42" checked></td><td id='m42'>2</td><td>Simple baseline - 影片加上字幕</td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox43" checked></td><td id='m43'>2</td><td>Medium baseline - 七步驟(CC0 <span style="color:yellow;">影片</span>)</td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox44" checked></td><td id='m44'>2</td><td>Medium baseline  - 每一頁標明第幾步驟 </td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox45" ></td><td id='m45'>2</td><td>Strong baseline - OBS直播到YouTube </td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox45" checked></td><td id='m45'>2</td><td>Strong baseline - OBS直播到YouTube </td></tr>
       </table>
       <!-- hw04: 評分表 -->
     </div>
@@ -414,23 +414,24 @@
       <hr>
       <p>作業五倉儲 <a href="https://github.com/你的帳號/ca2024fhw06/">https://github.com/你的帳號/ca2024fhw05/</a></p>
       <hr>
-      <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
+      <p>我覺的這次最難的部分就是唱歌的部分，我唱個本來就超爛了，還選到日文歌。一個字寄，兩個字中計，三個字大中計。其他部分講義都寫得很清楚，所以照作媒什麼問題。只是直播的視窗擷取不太會，所以就擷取得很模糊哈哈，但整體上來說還可以。</p>
       <hr>
       <!-- hw05: 評分表 -->
       <table>
         <tr><th>分數</th><th>完成後打勾</th><th>配分</th><th>分項描述</th></tr>
         <tr><td rowspan="5" id="myTotal5"></td>
-            <td><input type="checkbox" class="flipswitch" id="myCheckbox51"></td><td id='m51'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox52"></td><td id='m52'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox53"></td><td id='m53'>2</td><td>Medium baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox54"></td><td id='m54'>2</td><td>Medium baseline  - 描述 </td></tr>
+            <td><input type="checkbox" class="flipswitch" id="myCheckbox51" checked></td><td id='m51'>2</td><td>Simple baseline - 描述</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox52" checked></td><td id='m52'>2</td><td>Simple baseline - 描述</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox53" checked></td><td id='m53'>2</td><td>Medium baseline - 描述</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox54" checked></td><td id='m54'>2</td><td>Medium baseline  - 描述 </td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox55" checked></td><td id='m55'>2</td><td>Strong baseline - 描述 </td></tr>
       </table>
       <!-- hw05: 評分表 -->
     </div>
     <div class="col-md-7 twenty">
       <!-- 作業五影片製作完畢，上傳到 YouTube 之後，記得鑲嵌你的 YouTube 影片到這裡 -->
-      <img src="https://www.svgrepo.com/show/299435/youtube.svg" width="49%">
+      <!-- <img src="https://www.svgrepo.com/show/299435/youtube.svg" width="49%"> -->
+      <iframe width="49%" height="315" src="https://www.youtube.com/embed/-Jyjl-jeDtM?si=hLyDCGiMShe51Vls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
   
@@ -441,24 +442,25 @@
       <hr>
       <p>作業六倉儲 <a href="https://github.com/你的帳號/ca2024fhw06/">https://github.com/你的帳號/ca2024fhw06/</a></p>
       <hr>
-      <p>心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。</p>
+      <p>感謝許OO提供的NIGHT DANCER動捕衣。上課聽完大家的唱歌我直接自卑了。大家都唱得好好也做得好好QQ。這次期末專案我上課都有跟著進度，所已完成是沒什麼問題的，只是就沒設麼創新啦。看到有人做的神奇寶貝超猛的!!這個課堂第一次接觸到unity，嘗試蠻多新東西，學了很多。</p>
       <hr>
       <!-- hw06: 評分表 -->
       <table>
         <tr><th>分數</th><th>完成後打勾</th><th>配分</th><th>分項描述</th></tr>
         <tr><td rowspan="5" id="myTotal6"></td>
-            <td><input type="checkbox" class="flipswitch" id="myCheckbox61"></td><td id='m61'>2</td><td>Simple baseline - 描述</td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox62"></td><td id='m62'>2</td><td>Simple baseline - 描述</td></tr>
+            <td><input type="checkbox" class="flipswitch" id="myCheckbox61" checked></td><td id='m61'>2</td><td>Simple baseline - 描述</td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox62" checked></td><td id='m62'>2</td><td>Simple baseline - 描述</td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox63" checked></td><td id='m63'>2</td><td>Medium baseline - 描述</td></tr>
         <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox64" checked></td><td id='m64'>2</td><td>Medium baseline  - 描述 </td></tr>
-        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox65"></td><td id='m65'>2</td><td>Strong baseline - 描述 </td></tr>
+        <tr><td><input type="checkbox" class="flipswitch" id="myCheckbox65" checked></td><td id='m65'>2</td><td>Strong baseline - 描述 </td></tr>
         <!-- <tr><td colspan="4"> <a href="https://github.com/tjhsieh/ca2024fhw06/">前往作業六 GitHub 倉儲 「ca2024fhw06」</a> </td></tr> <!-- 「Repository 託管程式碼空間」 -->
       </table>
       <!-- hw06: 評分表 -->
     </div>
     <div class="col-md-7 twenty">
       <!-- 作業六影片製作完畢，上傳到 YouTube 之後，記得鑲嵌你的 YouTube 影片到這裡 -->
-      <img src="https://www.svgrepo.com/show/299435/youtube.svg" width="49%">
+      <!-- <img src="https://www.svgrepo.com/show/299435/youtube.svg" width="49%"> -->
+      <iframe width="49%" height="315" src="https://www.youtube.com/embed/KKFzYzADo6s?si=0v2DVmeEEw9KFxnr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
   
